objects/Freight_Charge_Policy__c/Freight_Charge_Policy__c.object-meta.xml
<CustomObject>
    <label>Freight Charge Policy</label>
    <nameField>
        <displayFormat>FCP-{0000000}</displayFormat>
        <label>Freight Charge Policy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freight Charge Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>