objects/Freight_Charge_Policy__c/fields/Freight_Charge_Percent__c.field-meta.xml
<CustomField>
    <fullName>Freight_Charge_Percent__c</fullName>
    <label>Freight Charge Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>